--- a/public/index.html
+++ b/public/index.html
@@ -5,56 +5,40 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="icon" type="image/png" href="favicon.ico">
+    <!--
+      manifest.json provides metadata used when your web app is installed on a
+      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
+    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="../src/assets/stylesheets/index.css"/>
+    <!--
+      Notice the use of %PUBLIC_URL% in the tags above.
+      It will be replaced with the URL of the `public` folder during the build.
+      Only files inside the `public` folder can be referenced from the HTML.
+
+      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+      work correctly both with client-side routing and a non-root public URL.
+      Learn how to configure a non-root public URL by running `npm run build`.
+    -->
     <title>Credit Cruise</title>
   </head>
   <body>
-    <div class="super-container">
-    <div class="nav-div">
-      <div class="logo"><b>Credit Cruise</b></div>
-      <ul class="nav-list">
-        <a href="/public/index.html"><li class="nav-item">Dashboard</li></a>
-        <a href="/public/login.html"><li class="nav-item">Login</li></a>
-        <a href="/public/register.html"><li class="nav-item">Register</li></a>
-        <a href="#"><li class="nav-item">About Us</li></a>
-      </ul>
-    </div>
-    <div class="apply-loan-container">
-      <p class="apply-loan-title">Apply online for an instant loan using KYC details:</p>
-      <ul class="apply-loan-list">
-        <li>1. Online Personal EMI Loans: From ₹1,000 to ₹10,00,000</li>
-        <li>2. Interest Rate Range - 10% to 20% per annum.</li>
-        <li>3. Tenure – Choose repayment periods from 1 to 48 months.</li>
-      </ul>
-    </div>
-  </div>
-    <div class="apply-loan-container">
-      <p class="apply-loan-title">Steps to avail an instant loan:</p>
-      <ul class="apply-loan-list">
-        <li>1. Sign up using your email id</li>
-        <li>2. Provide Permanent Account Number(PAN)</li>
-        <li>3. Upload KYC documents and get your profile verified</li>
-        <li>4. Choose your loan amount and tenure</li>
-        <li>5. Provide your bank details for credit and to avail of other facilities</li>
-      </ul>
-      </div>
-      <script>
-        document.getElementById('login-form').addEventListener('submit', function(event) {
-          event.preventDefault();
-          const username = document.getElementById('username').value;
-          const password = document.getElementById('password').value;
-          console.log(`Username: ${username}`);
-          console.log(`Password: ${password}`);
-        });
-      </script>
-    <footer class="footer">
-      <div class="footer-content">
-        <p>&copy; Credit Cruise 2024. All Rights Reserved.</p>
-        <p>*The Rate of Interest is being used for illustration purpose only, and may vary basis our internal policy</p>
-        <p>#Terms and Conditions apply</p>
-      </div>
-    </footer>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
+      This HTML file is a template.
+      If you open it directly in the browser, you will see an empty page.
+
+      You can add webfonts, meta tags, or analytics to this file.
+      The build step will place the bundled scripts into the <body> tag.
+
+      To begin the development, run `npm start` or `yarn start`.
+      To create a production bundle, use `npm run build` or `yarn build`.
+    -->
   </body>
 </html>
